[package]
name = "matrix-beeminder-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.42"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
config = "0.11.0"
matrix-sdk = "0.3.0"
url = "2.2.2"
ruma = "0.2.0"
